-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.15.2
-
None
-
-
73221d263 (dev), 49cf61f64 (6.9), 5d25aa3b8 (6.8)
My application is a video player, and the underlying playback module occasionally reports some information, which is displayed to the user through a bubble notification. This bubble notification is implemented using QWidget, and its parent window is the main window of the application. At the same time, I set some window properties for the notification widget, specifically:
setWindowFlags(windowFlags() | Qt::FramelessWindowHint | Qt::Tool);
During testing, we found that sometimes the bubble notification widget crashes when flush() is called.
For Gerrit Dashboard: QTBUG-132072 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
610565,2 | QWidget::mapTo()/mapFrom(): Do not crash if parent argument is invalid | dev | qt/qtbase | Status: MERGED | +2 | +1 |
611069,2 | QWidget::mapTo()/mapFrom(): Do not crash if parent argument is invalid | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
611180,2 | QWidget::mapTo()/mapFrom(): Do not crash if parent argument is invalid | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |